# zot-cell

./: .gitignore  Cargo.toml  LICENSE  README.md  analyze.py
.github/workflows/: benchmark.yml  build.yml
src/: main.rs
